include/spudgpu.h

typedef uint32_t SPUDGPU_FORMAT;
typedef struct spudgpu_instance_t *spudgpu_instance;
typedef struct spudgpu_device_t *spudgpu_device;
typedef struct spudgpu_buffer_t *spudgpu_buffer;
typedef struct spudgpu_buffer_view_t *spudgpu_buffer_view;
typedef struct spudgpu_image_t *spudgpu_image;
typedef struct spudgpu_image_view_t *spudgpu_image_view;
typedef struct spudgpu_command_list_t *spudgpu_command_list;
typedef struct spudgpu_command_queue_t *spudgpu_command_queue;
typedef struct spudgpu_swap_chain_t *spudgpu_swap_chain;
typedef struct spudgpu_surface_t *spudgpu_surface;
typedef uint32_t SPUDGPU_NATIVE_API;
SPUDRESULT spudgpu_enumerate_devices(
    spudgpu_instance instance,
    spudgpu_device **out_devices,
    uint32_t *out_devices_count);
SPUDGPU_NATIVE_API spudgpu_get_native_gpu_api(spudgpu_instance instance);
void spudgpu_begin_command_list(spudgpu_command_list cmd);
void spudgpu_end_command_list(spudgpu_command_list cmd);
typedef uint32_t SPUDGPU_MEMORY_FLAGS;
enum {
	SPUDGPU_MEMORY_FLAGS_NONE = 0,
	SPUDGPU_MEMORY_FLAGS_DEVICE_LOCAL = 1 << 0,
	SPUDGPU_MEMORY_FLAGS_HOST_VISIBLE = 1 << 1,
	SPUDGPU_MEMORY_FLAGS_HOST_COHERENT = 1 << 2,
	SPUDGPU_MEMORY_FLAGS_HOST_CACHED = 1 << 3
};
typedef uint32_t SPUDGPU_BUFFER_USAGE;
enum {
	SPUDGPU_BUFFER_USAGE_NONE = 0,
	SPUDGPU_BUFFER_USAGE_VERTEX = 1 << 0,
	SPUDGPU_BUFFER_USAGE_INDEX = 1 << 1,
	SPUDGPU_BUFFER_USAGE_UNIFORM = 1 << 2,
	SPUDGPU_BUFFER_USAGE_STORAGE = 1 << 3,
	SPUDGPU_BUFFER_USAGE_TRANSFER_SRC = 1 << 4,
	SPUDGPU_BUFFER_USAGE_TRANSFER_DST = 1 << 5,
	SPUDGPU_BUFFER_USAGE_RAYTRACING_ACCELERATION_STRUCTURE = 1 << 6,
	SPUDGPU_BUFFER_USAGE_INDIRECT = 1 << 7
};
typedef uint32_t SPUDGPU_HEAP_FLAGS;
typedef uint32_t SPUDGPU_RESOURCE_FLAGS;
typedef struct spudgpu_buffer_desc {
	SPUDGPU_BUFFER_USAGE usage;
	SPUDGPU_MEMORY_FLAGS memory_flags;
	SPUDGPU_HEAP_FLAGS heap_flags;
	SPUDGPU_RESOURCE_FLAGS buffer_flags;
	uint64_t gpu_address_location;
	uint64_t size;
#if _DEBUG
	const char *debug_name;
#endif
} spudgpu_buffer_desc;
SPUDRESULT spudgpu_create_buffer(
    spudgpu_device device,
    const spudgpu_buffer_desc *desc,
    spudgpu_buffer *out_buffer);
void spudgpu_destroy_buffer(spudgpu_buffer buffer);
SPUDRESULT spudgpu_get_buffer_desc(
    spudgpu_buffer buffer,
    spudgpu_buffer_desc *out_desc);
typedef struct spudgpu_buffer_view_desc {
	spudgpu_buffer parent_buffer;
	uint64_t offset_from_parent_buffer;
	uint64_t stride;
	uint64_t size;
} spudgpu_buffer_view_desc;
SPUDRESULT spudgpu_create_buffer_view(
    spudgpu_buffer buffer,
    const spudgpu_buffer_view_desc *desc,
    spudgpu_buffer_view *out_buffer_view);
void spudgpu_destroy_buffer_view(spudgpu_buffer_view buffer_view);
SPUDRESULT spudgpu_get_buffer_view_desc(
    spudgpu_buffer_view view,
    spudgpu_buffer_view_desc *out_desc);
typedef uint32_t SPUDGPU_IMAGE_TYPE;
enum {
	SPUDGPU_IMAGE_TYPE_NONE = 0,
	SPUDGPU_IMAGE_TYPE_1D   = 1 << 0,
	SPUDGPU_IMAGE_TYPE_2D   = 1 << 1,
	SPUDGPU_IMAGE_TYPE_3D   = 1 << 2
};
typedef uint32_t SPUDGPU_IMAGE_USAGE;
enum {
	SPUDGPU_IMAGE_USAGE_NONE = 0,
	SPUDGPU_IMAGE_USAGE_SAMPLED = 1 << 0,
	SPUDGPU_IMAGE_USAGE_COLOR_ATTACHMENT         = 1 << 1,
	SPUDGPU_IMAGE_USAGE_DEPTH_STENCIL_ATTACHMENT = 1 << 2,
	SPUDGPU_IMAGE_USAGE_STORAGE                  = 1 << 3,
	SPUDGPU_IMAGE_USAGE_TRANSFER_SRC             = 1 << 4,
	SPUDGPU_IMAGE_USAGE_TRANSFER_DST             = 1 << 5,
	SPUDGPU_IMAGE_USAGE_PRESENTABLE               = 1 << 6,
	SPUDGPU_IMAGE_USAGE_TRANSIENT_ATTACHMENT      = 1 << 7
};
typedef struct SPUDGPU_CLEAR_VALUE {
	SPUDGPU_FORMAT format;
	union {
		float color[4];
		SPUDGPU_DEPTH_STENCIL_VALUE depth_stencil;
	};
} SPUDGPU_CLEAR_VALUE;
typedef struct spudgpu_image_desc {
	SPUDGPU_IMAGE_USAGE usage;
	SPUDGPU_IMAGE_TYPE type;
	SPUDGPU_MEMORY_FLAGS memory_flags;
	SPUDGPU_HEAP_FLAGS heap_flags;
	SPUDGPU_RESOURCE_FLAGS image_flags;
	SPUDGPU_CLEAR_VALUE clear_value;
	uint64_t gpu_address_location;
	SPUDGPU_FORMAT format;
	uint32_t width;
	uint32_t height;
	uint32_t depth;
	uint32_t array_layers;
	uint32_t mip_levels;
#if _DEBUG
	const char *debug_name;
#endif
} spudgpu_image_desc;
SPUDRESULT spudgpu_create_image(
    spudgpu_device device,
    const spudgpu_image_desc *desc,
    spudgpu_image *out_image);
void spudgpu_destroy_image(spudgpu_image image);
SPUDRESULT spudgpu_get_image_desc(
    spudgpu_image image,
    spudgpu_image_desc *out_desc);
typedef uint32_t SPUDGPU_IMAGE_VIEW_TYPE;
enum {
	SPUDGPU_IMAGE_VIEW_TYPE_NONE       = 0,
	SPUDGPU_IMAGE_VIEW_TYPE_1D         = 1 << 0,
	SPUDGPU_IMAGE_VIEW_TYPE_2D         = 1 << 1,
	SPUDGPU_IMAGE_VIEW_TYPE_3D         = 1 << 2,
	SPUDGPU_IMAGE_VIEW_TYPE_CUBE       = 1 << 3,
	SPUDGPU_IMAGE_VIEW_TYPE_1D_ARRAY   = 1 << 4,
	SPUDGPU_IMAGE_VIEW_TYPE_2D_ARRAY   = 1 << 5,
	SPUDGPU_IMAGE_VIEW_TYPE_CUBE_ARRAY = 1 << 6
};
typedef struct spudgpu_image_view_desc_subresource_range {
	uint64_t aspect_mask;
	uint64_t base_mip_level;
	uint64_t mip_level_count;
	uint64_t base_array_layer;
	uint64_t array_layer_count;
} spudgpu_image_view_desc_subresource_range;
typedef struct spudgpu_image_view_desc {
	spudgpu_image parent_image;
	uint32_t type;
	spudgpu_image_view_desc_subresource_range subresource_range;
} spudgpu_image_view_desc;
SPUDRESULT spudgpu_create_image_view(
    spudgpu_image image,
    const spudgpu_image_view_desc *desc,
    spudgpu_image_view *out_image_view);
void spudgpu_destroy_image_view(spudgpu_image_view image_view);
SPUDRESULT spudgpu_get_image_view_desc(
    spudgpu_image_view image_view,
    spudgpu_image_view_desc *out_desc);
typedef uint32_t SPUDGPU_PRESENT_MODE;
enum {
	SPUDGPU_PRESENT_MODE_IMMEDIATE = 0,
	SPUDGPU_PRESENT_MODE_FIFO = 1,
	SPUDGPU_PRESENT_MODE_MAILBOX = 2
};
typedef uint8_t SPUDGPU_FULLSCREEN_MODE;
typedef struct spudgpu_swap_chain_desc {
	spudgpu_surface surface;
	spudgpu_command_queue queue;
	uint32_t width;
	uint32_t height;
	uint32_t buffer_count;
	SPUDGPU_FORMAT format;
	SPUDGPU_PRESENT_MODE present_mode;
	SPUDGPU_FULLSCREEN_MODE fullscreen_mode;
} spudgpu_swap_chain_desc;
SPUDRESULT spudgpu_create_swap_chain(
    spudgpu_device device,
    const spudgpu_swap_chain_desc *desc,
    spudgpu_swap_chain *out_swap_chain);
void spudgpu_destroy_swap_chain(spudgpu_swap_chain swap_chain);
SPUDRESULT spudgpu_get_swap_chain_desc(
    spudgpu_swap_chain swap_chain,
    spudgpu_swap_chain_desc *out_desc);
uint32_t spudgpu_swap_chain_acquire_next_image(spudgpu_swap_chain swap_chain);
void spudgpu_swap_chain_present(spudgpu_swap_chain swap_chain);
typedef struct SPUDGPU_VIEWPORT {
	float x;
	float y;
	float width;
	float height;
	float minDepth;
	float maxDepth;
} SPUDGPU_VIEWPORT;
typedef struct SPUDGPU_SCISSOR_RECT {
	float x;
	float y;
	float width;
	float height;
} SPUDGPU_SCISSOR_RECT;