bindings/rust/spudlib-sys/src/bindings.rs


pub type SPUDGPU_MEMORY_FLAGS = u32;
pub const SPUDGPU_MEMORY_FLAGS_NONE: SPUDGPU_MEMORY_FLAGS          = 0;
pub const SPUDGPU_MEMORY_FLAGS_DEVICE_LOCAL: SPUDGPU_MEMORY_FLAGS  = 1 << 0;
pub const SPUDGPU_MEMORY_FLAGS_HOST_VISIBLE: SPUDGPU_MEMORY_FLAGS  = 1 << 1;
pub const SPUDGPU_MEMORY_FLAGS_HOST_COHERENT: SPUDGPU_MEMORY_FLAGS = 1 << 2;
pub const SPUDGPU_MEMORY_FLAGS_HOST_CACHED: SPUDGPU_MEMORY_FLAGS   = 1 << 3;

// ----------------------------------------------------------------
// SPUDGPU_BUFFER_USAGE
// ----------------------------------------------------------------

pub type SPUDGPU_BUFFER_USAGE = u32;
pub const SPUDGPU_BUFFER_USAGE_NONE: SPUDGPU_BUFFER_USAGE    = 0;
pub const SPUDGPU_BUFFER_USAGE_VERTEX: SPUDGPU_BUFFER_USAGE  = 1 << 0;
pub const SPUDGPU_BUFFER_USAGE_INDEX: SPUDGPU_BUFFER_USAGE   = 1 << 1;
pub const SPUDGPU_BUFFER_USAGE_UNIFORM: SPUDGPU_BUFFER_USAGE = 1 << 2;
pub const SPUDGPU_BUFFER_USAGE_STORAGE: SPUDGPU_BUFFER_USAGE = 1 << 3;

// ----------------------------------------------------------------
// SPUDGPU_IMAGE_TYPE
// ----------------------------------------------------------------

pub type SPUDGPU_IMAGE_TYPE = u32;
pub const SPUDGPU_IMAGE_TYPE_NONE: SPUDGPU_IMAGE_TYPE = 0;
pub const SPUDGPU_IMAGE_TYPE_1D: SPUDGPU_IMAGE_TYPE   = 1 << 0;
pub const SPUDGPU_IMAGE_TYPE_2D: SPUDGPU_IMAGE_TYPE   = 1 << 1;
pub const SPUDGPU_IMAGE_TYPE_3D: SPUDGPU_IMAGE_TYPE   = 1 << 2;

// ----------------------------------------------------------------
// SPUDGPU_IMAGE_USAGE
// ----------------------------------------------------------------

pub type SPUDGPU_IMAGE_USAGE = u32;
pub const SPUDGPU_IMAGE_USAGE_NONE: SPUDGPU_IMAGE_USAGE                     = 0;
pub const SPUDGPU_IMAGE_USAGE_SAMPLED: SPUDGPU_IMAGE_USAGE                  = 1 << 0;
pub const SPUDGPU_IMAGE_USAGE_COLOR_ATTACHMENT: SPUDGPU_IMAGE_USAGE         = 1 << 1;
pub const SPUDGPU_IMAGE_USAGE_DEPTH_STENCIL_ATTACHMENT: SPUDGPU_IMAGE_USAGE = 1 << 2;
pub const SPUDGPU_IMAGE_USAGE_STORAGE: SPUDGPU_IMAGE_USAGE                  = 1 << 3;
pub const SPUDGPU_IMAGE_USAGE_TRANSFER_SRC: SPUDGPU_IMAGE_USAGE             = 1 << 4;
pub const SPUDGPU_IMAGE_USAGE_TRANSFER_DST: SPUDGPU_IMAGE_USAGE             = 1 << 5;

// ----------------------------------------------------------------
// SPUDGPU_IMAGE_VIEW_TYPE
// ----------------------------------------------------------------

pub type SPUDGPU_IMAGE_VIEW_TYPE = u32;
pub const SPUDGPU_IMAGE_VIEW_TYPE_NONE: SPUDGPU_IMAGE_VIEW_TYPE        = 0;
pub const SPUDGPU_IMAGE_VIEW_TYPE_1D: SPUDGPU_IMAGE_VIEW_TYPE          = 1 << 0;
pub const SPUDGPU_IMAGE_VIEW_TYPE_2D: SPUDGPU_IMAGE_VIEW_TYPE          = 1 << 1;
pub const SPUDGPU_IMAGE_VIEW_TYPE_3D: SPUDGPU_IMAGE_VIEW_TYPE          = 1 << 2;
pub const SPUDGPU_IMAGE_VIEW_TYPE_CUBE: SPUDGPU_IMAGE_VIEW_TYPE        = 1 << 3;
pub const SPUDGPU_IMAGE_VIEW_TYPE_1D_ARRAY: SPUDGPU_IMAGE_VIEW_TYPE    = 1 << 4;
pub const SPUDGPU_IMAGE_VIEW_TYPE_2D_ARRAY: SPUDGPU_IMAGE_VIEW_TYPE    = 1 << 5;
pub const SPUDGPU_IMAGE_VIEW_TYPE_CUBE_ARRAY: SPUDGPU_IMAGE_VIEW_TYPE  = 1 << 6;

// ----------------------------------------------------------------
// SPUDGPU_PRESENT_MODE
// ----------------------------------------------------------------

pub type SPUDGPU_PRESENT_MODE = u32;
pub const SPUDGPU_PRESENT_MODE_IMMEDIATE: SPUDGPU_PRESENT_MODE = 0;
pub const SPUDGPU_PRESENT_MODE_FIFO: SPUDGPU_PRESENT_MODE      = 1;
pub const SPUDGPU_PRESENT_MODE_MAILBOX: SPUDGPU_PRESENT_MODE   = 2;

// ----------------------------------------------------------------
// Descriptor structs  (must exactly match the C layout)
// ----------------------------------------------------------------

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct spudgpu_buffer_desc {
    pub usage: u32,
    pub memory_flags: u32,
    pub gpu_address_location: u64,
    pub size: u64,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct spudgpu_buffer_view_desc {
    pub parent_buffer: spudgpu_buffer,
    pub offset_from_parent_buffer: u64,
    pub stride: u64,
    pub size: u64,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct spudgpu_image_desc {
    pub usage: u32,
    pub type_: u32,          // 'type' is a keyword in Rust
    pub memory_flags: u32,
    pub gpu_address_location: u64,
    pub format: SPUDGPU_FORMAT,
    pub width: u32,
    pub height: u32,
    pub depth: u32,
    pub array_layers: u32,
    pub mip_levels: u32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct spudgpu_image_view_desc_subresource_range {
    pub aspect_mask: u64,
    pub base_mip_level: u64,
    pub mip_level_count: u64,
    pub base_array_layer: u64,
    pub array_layer_count: u64,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct spudgpu_image_view_desc {
    pub parent_image: spudgpu_image,
    pub type_: u32,          // 'type' is a keyword in Rust
    pub subresource_range: spudgpu_image_view_desc_subresource_range,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SPUDGPU_VIEWPORT {
    pub x: c_float,
    pub y: c_float,
    pub width: c_float,
    pub height: c_float,
    pub min_depth: c_float,
    pub max_depth: c_float,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SPUDGPU_SCISSOR_RECT {
    pub x: c_float,
    pub y: c_float,
    pub width: c_float,
    pub height: c_float,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct spudgpu_swap_chain_desc {
    pub window_handle: *mut c_void,
    pub width: u32,
    pub height: u32,
    pub buffer_count: u32,
    pub format: SPUDGPU_FORMAT,
    pub present_mode: SPUDGPU_PRESENT_MODE,
    pub fullscreen: bool,
}

// ----------------------------------------------------------------
// Extern "C" function declarations — one per public spudgpu.h symbol
// ----------------------------------------------------------------

extern "C" {
    // Instance
    pub fn spudgpu_init(
        native_api: SPUDGPU_NATIVE_API,
        application_name: *const c_char,
        application_version: u32,
        engine_name: *const c_char,
        engine_version: u32,
    ) -> spudgpu_instance;

    pub fn spudgpu_terminate(instance: spudgpu_instance);

    pub fn spudgpu_enumerate_devices(
        instance: spudgpu_instance,
        pp_output_devices: *mut *mut spudgpu_device,
        p_output_device_count: *mut u32,
    ) -> bool;

    pub fn spudgpu_get_native_gpu_api(instance: spudgpu_instance) -> SPUDGPU_NATIVE_API;

    // Buffer
    pub fn spudgpu_create_buffer(
        device: spudgpu_device,
        desc: *const spudgpu_buffer_desc,
    ) -> spudgpu_buffer;

    pub fn spudgpu_get_buffer_desc(buffer: spudgpu_buffer) -> spudgpu_buffer_desc;

    pub fn spudgpu_destroy_buffer(device: spudgpu_device, buffer: spudgpu_buffer);

    pub fn spudgpu_create_buffer_view(
        buffer: spudgpu_buffer,
        desc: *const spudgpu_buffer_view_desc,
    ) -> spudgpu_buffer_view;

    pub fn spudgpu_get_buffer_view_desc(view: spudgpu_buffer_view) -> spudgpu_buffer_view_desc;

    pub fn spudgpu_destroy_buffer_view(buffer: spudgpu_buffer_view);

    // Image
    pub fn spudgpu_create_image(
        device: spudgpu_device,
        desc: *const spudgpu_image_desc,
    ) -> spudgpu_image;

    pub fn spudgpu_get_image_desc(image: spudgpu_image) -> spudgpu_image_desc;

    pub fn spudgpu_destroy_image(device: spudgpu_device, image: spudgpu_image);

    pub fn spudgpu_create_image_view(
        image: spudgpu_image,
        desc: *const spudgpu_image_view_desc,
    ) -> spudgpu_image_view;

    pub fn spudgpu_destroy_image_view(device: spudgpu_device, image_view: spudgpu_image_view);

    pub fn spudgpu_get_image_view_desc(image_view: spudgpu_image_view) -> spudgpu_image_view_desc;

    // Command list
    pub fn spudgpu_begin_command_list(cmd: spudgpu_command_list);
    pub fn spudgpu_end_command_list(cmd: spudgpu_command_list);

    pub fn spudgpu_set_viewports(
        cmd: spudgpu_command_list,
        first_viewport: u32,
        viewport_count: u32,
        viewports: *const SPUDGPU_VIEWPORT,
    );

    pub fn spudgpu_set_scissor_rects(
        cmd: spudgpu_command_list,
        first_scissor_rect: u32,
        scissor_rect_count: u32,
        scissor_rects: *const SPUDGPU_SCISSOR_RECT,
    );

    pub fn spudgpu_set_vertex_buffers(
        cmd: spudgpu_command_list,
        start_slot: u32,
        view_count: u32,
        buffer_views: *mut spudgpu_buffer_view,
    );

    pub fn spudgpu_set_index_buffers(
        cmd: spudgpu_command_list,
        view_count: u32,
        buffer_views: *mut spudgpu_buffer_view,
    );

    pub fn spudgpu_draw(
        cmd: spudgpu_command_list,
        vertex_count: u32,
        start_vertex_location: u32,
    );

    pub fn spudgpu_draw_indexed(
        cmd: spudgpu_command_list,
        index_count: u32,
        start_index_location: u32,
        base_vertex_location: u32,
    );

    pub fn spudgpu_draw_instanced(
        cmd: spudgpu_command_list,
        vertex_count_per_instance: u32,
        instance_count: u32,
        start_vertex_location: u32,
        start_instance_location: u32,
    );

    pub fn spudgpu_draw_indexed_instanced(
        cmd: spudgpu_command_list,
        index_count_per_instance: u32,
        instance_count: u32,
        start_index_location: u32,
        base_vertex_location: u32,
        start_instance_location: u32,
    );

    // Swap chain
    pub fn spudgpu_create_swap_chain(
        device: spudgpu_device,
        desc: *const spudgpu_swap_chain_desc,
    ) -> spudgpu_swap_chain;

    pub fn spudgpu_destroy_swap_chain(swap_chain: spudgpu_swap_chain);

    pub fn spudgpu_get_swap_chain_desc(swap_chain: spudgpu_swap_chain) -> spudgpu_swap_chain_desc;

    pub fn spudgpu_swap_chain_acquire_next_image(swap_chain: spudgpu_swap_chain) -> u32;

    pub fn spudgpu_swap_chain_present(swap_chain: spudgpu_swap_chain);
}